--- a/restor2/css/news.css
+++ b/restor2/css/news.css
@@ -139,6 +139,7 @@ nav {
     height: 60%;
     margin-bottom: 2%;
     background-color: #eeeae7;
+    padding-top: 2rem;
 }
 
 .usualli_li {
