--- a/restor2/media-css/media-index.css
+++ b/restor2/media-css/media-index.css
@@ -77,9 +77,7 @@
         padding-top: 0;
     }
 
-    .carousel {
-        height: 11%;
-    }
+
 
     .button:hover > .list {
         height: 185px;
@@ -126,7 +124,11 @@
         padding-top: 1%;
     }
 }
-
+@media screen and (max-width: 1125px){
+    .carousel{
+        min-height: 650px;
+    }
+}
 @media screen and (max-width: 1024px) {
     img {
         width: 100%;
@@ -139,6 +141,9 @@
 
     .phone1 {
         font-size: 1.2em;
+    }
+    .carousel{
+        min-height: 600px;
     }
 
     .icon_call {
@@ -164,11 +169,19 @@
     }
 }
 
+@media screen and (max-width: 880px){
+    .carousel{
+        min-height:500px;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .phone1 {
         font-size: 1em;
     }
-
+    .carousel{
+        min-height:450px;
+    }
     .icon_call {
         width: 20px;
         height: 20px;
@@ -344,6 +357,10 @@
     nav {
         align-self: center;
         background-position: center;
+    }
+
+    h2{
+        font-size: 2em;
     }
 
     #undefined-sticky-wrapper{
